--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mail App</title>
     <style>
+        body{
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color: white;
+            background-color: black;
+        }
+        .form{
+            width: 70vh;
+        }
+        input, textarea{
+            background-color: rgba(0, 0, 0, 0.5);
+            border: 1px solid white;
+            padding: 1em;
+        }
         form{
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-content: center;
+        }
+        button{
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            width: 50px;
+            padding: 0.5em;
+            border-radius: 14px;
+            border: 1px solid white;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <h1>Mail App</h1>
-   
+   <div class="form">
     <form action="/send" method="post">
        To : <input type="text" name="email">
         From : <input type="text" name="recipient">
         Subject : <input type="text" name="subject">
         Message : <textarea name="msg" id="" cols="30" rows="10"></textarea>
+        <br>
         <button type="submit">Send</button>
     </form>
+    </div>
 </body>
 </html>
